--- a/package.json
+++ b/package.json
@@ -7,9 +7,13 @@
 		"start": "node index.js"
 	},
 	"dependencies": {
+		"body-parser": "^1.20.0",
+		"cors": "^2.8.5",
 		"dotenv": "^8.2.0",
 		"express": "^4.16.4",
-		"cors": "^2.8.5"
+		"moment": "^2.29.3",
+		"mongodb": "^4.6.0",
+		"mongoose": "^6.3.5"
 	},
 	"repository": {
 		"url": "https://github.com/freeCodeCamp/boilerplate-project-exercisetracker"
